--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,22 +2,22 @@
     <!-- first coloumn -->
     <div class="row">
         <div class="col-md-12">
-            <h1 class="big-h"><%= @latest_post.title %></h1>
+            <h1 class="big-h"><%= @post.title %></h1>
 
             <div class="row">
                 <div class="col-md-1">
-                    <%= link_to(image_tag(@latest_post.image.to_s, class:"img-circle img-responsive"), post_path(id: @latest_post.id)) %>
+                    <%= link_to(image_tag(@post.image.to_s, class:"img-circle img-responsive"), post_path(id: @post.id)) %>
                 </div>
                 <div class="col-md-11">
                     <p>
-                        <%= "#{@latest_post.author} on #{@latest_post.created_at}" %>
+                        <%= "#{@post.author} on #{@post.created_at}" %>
                     </p>
                 </div>
             </div>
         </div>
         <div class="col-md-12 col-xs-12">
             <p>
-                <%= simple_format(@latest_post.body)%></p>
+                <%= simple_format(@post.body)%></p>
         </div>
     </div>
     <div class="row">
@@ -54,10 +54,10 @@
 </div>
 <div class="col-md-3">
     <!-- Second coloumn -->
-    <%= image_tag(@latest_post.image.to_s,class: "img-circle img-responsive center-block", id: "socialpic") %>
+    <%= image_tag(@post.image.to_s,class: "img-circle img-responsive center-block", id: "socialpic") %>
     <div class="row">
         <div class="col-md-12">
-            <h4 class="text-center"><%= @latest_post.author %></h4>
+            <h4 class="text-center"><%= @post.author %></h4>
         </div>
     </div>
     <div class="row">
@@ -86,7 +86,6 @@
                 <%= @bottom_posts.last.body.truncate(160) %>
                 </p>
         </div>
-    </div>
 </div>
 </div>
 <div class="row">
