--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -71,7 +71,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <%= image_tag("doglife", class: "center-block") %>
+            <%= image_tag(@ads, class: "center-block img-responsive")%>
             <div class="row">
                 <div class="col-md-4 col-md-offset-8">
                     <a href="#">About ad</a>
