--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title><%= @post.title %></title>
+        <title><% if @post %>
+                    <%=@post.title %>
+                    <% else %>
+                    <%= "Pups" %>
+                    <% end %></title>
         <%= csrf_meta_tags %>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
